[tool.poetry]
name = "algorun"
version = "0.1.0"
description = ""
authors = ["Joe Polny <joepolny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
requests = "^2.31.0"
docopt = "^0.6.2"
yaspin = "^2.3.0"
psutil = "^5.9.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
types-docopt = "^0.6.11.3"
types-requests = "^2.31.0.2"
types-tqdm = "^4.65.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
ignore = [
  "ANN101", # no type for self
  "ANN102", # no type for cls
]